// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<code
  class="custom-class"
  data-name="yozora-inline-code"
  style="color:orange"
>
  Hello, world!
</code>
`;

exports[`snapshot default 1`] = `
<code
  class="yozora-inline-code"
  style="color:orange;font-size:16px"
>
  Hello, world!
</code>
`;
